--- a/src/index.njk
+++ b/src/index.njk
@@ -1,7 +1,42 @@
 ---
 layout: base.njk
-title: Hello World
+title: Holy Angels Catholic Church – Hale Barns, Cheshire
+eleventyNavigation:
+  key: home
+  order: 100
 ---
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col-9">
+                <h1>
+                     Welcome to the Parish of Holy Angels
+                </h1>
+                <p class="lead-paragraph">
+                    Entrusted to The Immaculate Heart of Mary, Queen of All Angels.
+                </p>
+                <a href="" class="body-link">
+                    View photos and prayer of entrustment
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
 
-Some text here to test
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 border-top">
+            </div>
+            <div class="col-9">
+                <h2>
+                     Welcome to Holy Angels Church
+                </h2>
+                <p>
+                    Entrusted to The Immaculate Heart of Mary, Queen of All Angels.
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
 
