Create footer and add our parish page

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>{{ title }}</title>
-	<meta name="description" content="Holy Angels Catholic Church – Hale Barns, Cheshire – holyangels.org.uk">
+	<meta name="description" content="{{ description }}">
 	<meta name="author" content="SitePoint">
 
 	<meta property="og:title" content="Holy Angels Catholic Church – Hale Barns">
@@ -13,15 +13,19 @@
 	<meta property="og:description" content="Holy Angels Catholic Church webstie – find mass timings and other events">
 	<meta property="og:image" content="image.png">
 
+	<link rel="canonical" href= "{{ page.url }}" />
 	<link rel="icon" href="/favicon.ico">
 	<link rel="icon" href="/favicon.svg" type="image/svg+xml">
 	<link rel="apple-touch-icon" href="/apple-touch-icon.png">
 	<link rel="stylesheet" href="{{ '/css/base.css' | url }}" />
 </head>
 <body>
+	<a class="skip-link govuk-!-display-none-print" href="#content">
+		Skip to main content
+	</a>
 	{% include 'header.njk' %}
 
-	<main>
+	<main id="content">
 		{{ content | safe }}
 	</main>
 
