--- a/src/index.njk
+++ b/src/index.njk
@@ -1,8 +1,9 @@
 ---
 layout: base.njk
 title: Holy Angels Catholic Church – Hale Barns, Cheshire
+description: Holy Angels Catholic Church – Hale Barns, Cheshire – holyangels.org.uk
 eleventyNavigation:
-  key: home
+  key: Home
   order: 100
 ---
 <section>
@@ -12,6 +13,10 @@ eleventyNavigation:
                 <h1>
                      Welcome to the Parish of Holy Angels
                 </h1>
+                <img src="/assets/images/holy-angels-catholic-church-hale-barns-inside-picture.jpg"
+                    alt="The head and torso of a dinosaur skeleton;
+                    it has a large head with long sharp teeth"
+                    class="feature-image">
                 <p class="lead-paragraph">
                     Entrusted to The Immaculate Heart of Mary, Queen of All Angels.
                 </p>
