--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -4,8 +4,10 @@
 @import 'components/grid';
 @import 'components/utility';
 @import 'components/typography';
+@import 'components/skip-link';
 @import 'components/header';
 @import 'components/buttons';
 @import 'components/navigation';
+@import 'components/footer';
 
 
