--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,13 +1,5 @@
 .header-logotype {
-    padding: 0.5em 0;
-    display: flex; /* NEW, Spec - Opera 12.1, Firefox 20+ */
-    display: -webkit-box; /* OLD - iOS 6-, Safari 3.1-6 */
-    display: -moz-box; /* OLD - Firefox 19- (buggy but mostly works) */
-    display: -ms-flexbox; /* TWEENER - IE 10 */
-    display: -webkit-flex; /* NEW - Chrome */
-    align-content: center;
-    justify-content: flex-start;
-    @media only screen and (min-width: $breakpoint-med) {
+    @media only screen and (min-width: $breakpoint-large) {
         padding: 0.75em 0;
     }
 }
