--- a/src/sass/components/_typography.scss
+++ b/src/sass/components/_typography.scss
@@ -6,10 +6,10 @@ h1 {
     font-family: $font-family-serif;
     font-size: 2.369rem;
     font-weight: $font-weight-regular;
-    margin: 0 0 1.875rem;
+    margin: 0 0 1.25rem;
     @media only screen and (min-width: $breakpoint-med) {
       font-size: 3.157rem;
-      margin: 0 0 1.25rem;
+      margin: 0 0 1.875rem;
     }
 }
   
@@ -18,10 +18,10 @@ h2 {
     font-size: 1.777rem;
     line-height: 1.25;
     font-weight: $font-weight-medium;
-    margin: 0 0 0.9375rem;
+    margin: 1.25rem 0 0.9375rem 0;
     @media only screen and (min-width: $breakpoint-med) {
         font-size: 2.369rem;
-        margin: 0 0 1.25rem;
+        margin: 1.25rem 0;
     }
 }
   
@@ -55,9 +55,18 @@ p {
     font-weight: $font-weight-regular;
     line-height: $font-height;
     margin: 0 0 0.9375rem;
+
+    &:last-of-type {
+        margin-bottom: 1.5rem;
+    }
+
     @media only screen and (min-width: $breakpoint-med) {
         font-size: 1.125rem;
         margin: 0 0 1.25rem;
+
+        &:last-of-type {
+            margin-bottom: 3rem;
+        }
     }
 }
 
@@ -67,9 +76,18 @@ p {
     line-height: 1.25;
     font-weight: $font-weight-regular;
     margin: 0 0 0.9375rem;
+
+    &:last-of-type {
+        margin-bottom: 0.9375rem;
+    }
+
     @media only screen and (min-width: $breakpoint-med) {
         font-size: 1.777rem;
         margin: 0 0 1.25rem;
+
+        &:last-of-type {
+            margin-bottom: 1.25rem;
+        }
     }
 }
 
@@ -102,7 +120,4 @@ p {
     @media only screen and (min-width: $breakpoint-med) {
         font-size: 1.125rem;
     }
-
-
-
 }
